#4895 do not grow collapsed questions in row Fixes #4895

--- a/packages/survey-creator-core/src/components/question.scss
+++ b/packages/survey-creator-core/src/components/question.scss
@@ -490,6 +490,7 @@ svc-question,
 
 .svc-question__adorner--collapsed {
   .svc-question__content {
+    flex-grow: 0;
     padding-bottom: calcSize(4);
     .sd-element__header,
     .sd-element--complex > .sd-element__header {
